[gd_scene load_steps=2 format=3 uid="uid://2vrljdef6ct2"]

[ext_resource type="Script" path="res://Scenes/EnvironmentalState/environmental_state.gd" id="1_kljnh"]

[node name="EnvironmentalState" type="Node"]
script = ExtResource("1_kljnh")

[node name="Container" type="VBoxContainer" parent="."]
unique_name_in_owner = true
offset_right = 108.0
offset_bottom = 40.0

[connection signal="elemental_states_change" from="." to="." method="_on_elemental_states_change"]
